--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.314.0",
     "next": "14.1.0",
+    "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
